Git_WGBH_QC/src/objects/SFDC_Old_Bug__c.object
<CustomObject>
    <description>Describes and tracks changes needed</description>
    <fields>
        <fullName>Module_Custom_Object__c</fullName>
        <description>Select the object or custom field</description>
        <label>Module or Custom Object</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACD Telemarketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Addresses (Custom)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applicant Tracking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction Anything</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bios</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign Program Reporting Tool (Custom))</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classifications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conga</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dashboards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Integrity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Merge Tools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eloqua</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events (Campaign)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Giving (Opportunity)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Imports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kimbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lawson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Discount Locations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Discounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBSd</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <description>Select the object or custom field</description>
        <label>Object</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Giving (Opportunity)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Discounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Discount Locations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Programs - ProTrack (TV)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Programs - Marketron (Radio)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events (Campaign)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign Program Reporting Tool (Custom))</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conga</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Integrity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Merge Tools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Imports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dashboards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applicant Tracking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lawson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eloqua</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kimbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classifications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bios</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC_Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFDC_Developer_Assigned__c</fullName>
        <label>Developer Assigned</label>
        <picklist>
            <picklistValues>
                <fullName>Brian Wainwright</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dinesh Gambhir</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gopi Ramineni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jon Cline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kamlesh Chauhan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ketan Benegal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lynn Gainty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ryan Huff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shahzad Khokhar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC_Estimated_Effort_Man_days__c</fullName>
        <label>Estimated Effort (Man-days)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDC_Estimated_Fix_Date__c</fullName>
        <label>Estimated Fix Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFDC_OS__c</fullName>
        <label>OS</label>
        <picklist>
            <picklistValues>
                <fullName>Windows 2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows XP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows 98</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Linux 32 Bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Linux 64 Bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sun OS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mac OS 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mac OS X 10</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SFDC_Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>0 - Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC_Release__c</fullName>
        <label>Release</label>
        <referenceTo>SFDC_Release__c</referenceTo>
        <relationshipName>R00N50000001HsLPEA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDC_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Will Not Fix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC_Target_Release__c</fullName>
        <label>Target Release</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDC_Title__c</fullName>
        <label>Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Load</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report Generation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC_Version__c</fullName>
        <label>Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <description>Look Up User/Developer to assign the bug</description>
        <inlineHelpText>User/Developer assigned to the bug</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Bugs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Old_Bug</label>
    <nameField>
        <displayFormat>BUG-{00000}</displayFormat>
        <label>Bug Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Old_Bugs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>